# cdk-changeset-reporter

./: README.md  cdk_changeset_reporter.py  pyproject.toml  requirements.txt
.github/: dependabot.yaml
cdk_changeset_reporter/: __main__.py  cdk_changeset_reporter.py
