[tool.poetry]
name = "cdk-changeset-reporter"
version = "0.3.1"
description = "Generate human-readable Github Markdown tables for CDK changesets"
authors = ["Citizens Advice <ca-devops@citizensadvice.org.uk>"]
license = "Apache"
readme = "README.md"
packages = [{include = "cdk_changeset_reporter"}]

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "^2.174.0"
boto3 = "^1.35.92"
terminaltables = "^3.1.10"

[tool.poetry.group.dev.dependencies]
boto3-stubs = {version = "1.35.92", extras = ["cloudformation"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
